# serializer version: 1
# name: test_footnote_placement_snapshot_different_types
  '''
  <div id="test_auto_placement" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
    <tr class="gt_heading">
      <td colspan="8" class="gt_heading gt_title gt_font_normal">Auto Placement Test</td>
    </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_auto_placement-integers">integers</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_auto_placement-floats">floats</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_auto_placement-currency">currency</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_auto_placement-percentages">percentages</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="test_auto_placement-text">text</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="test_auto_placement-mixed">mixed</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_auto_placement-formatted_num">formatted_num</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="test_auto_placement-scientific">scientific</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> 42</td>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> 123.45</td>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span> $1,234.56</td>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">4</span> 85.5%</td>
      <td class="gt_row gt_left">Hello<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">5</span></td>
      <td class="gt_row gt_left">ABC123<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">6</span></td>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">7</span> (1,000)</td>
      <td class="gt_row gt_left">1.23e-4<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">8</span></td>
    </tr>
  </tbody>
  <tfoot><tr class="gt_footnotes"><td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> Integer footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> Float footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span> Currency footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">4</span> Percentage footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">5</span> Text footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">6</span> Mixed footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">7</span> Formatted number footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="8"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">8</span> Scientific footnote</td></tr></tfoot>
  </table>
  
  </div>
  
  '''
# ---
# name: test_footnote_placement_snapshot_left_placement
  '''
  <div id="test_left_placement" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
    <tr class="gt_heading">
      <td colspan="3" class="gt_heading gt_title gt_font_normal">Left Placement Test</td>
    </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_left_placement-integers">integers</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="test_left_placement-text">text</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_left_placement-currency">currency</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> 42</td>
      <td class="gt_row gt_left"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> Hello</td>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span> $1,234.56</td>
    </tr>
  </tbody>
  <tfoot><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> Integer footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> Text footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span> Currency footnote</td></tr></tfoot>
  </table>
  
  </div>
  
  '''
# ---
# name: test_footnote_placement_snapshot_right_placement
  '''
  <div id="test_right_placement" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
    <tr class="gt_heading">
      <td colspan="3" class="gt_heading gt_title gt_font_normal">Right Placement Test</td>
    </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_right_placement-integers">integers</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id="test_right_placement-text">text</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_right_placement-currency">currency</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr>
      <td class="gt_row gt_right">42<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span></td>
      <td class="gt_row gt_left">Hello<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span></td>
      <td class="gt_row gt_right">$1,234.56<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span></td>
    </tr>
  </tbody>
  <tfoot><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> Integer footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> Text footnote</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span> Currency footnote</td></tr></tfoot>
  </table>
  
  </div>
  
  '''
# ---
# name: test_grand_summary_side_top_with_footnotes_snap
  '''
  <div id="test_grand_summary_top_footnotes" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1" scope="col" id=""></th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_grand_summary_top_footnotes-x">x</th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_grand_summary_top_footnotes-y">y</th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr>
      <th class="gt_last_grand_summary_row_top gt_row gt_left gt_stub gt_grand_summary_row">Total</th>
      <td class="gt_last_grand_summary_row_top gt_row gt_right gt_grand_summary_row"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> 10</td>
      <td class="gt_last_grand_summary_row_top gt_row gt_right gt_grand_summary_row">100</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="3">A</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">r1</th>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> 1</td>
      <td class="gt_row gt_right">10</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">r2</th>
      <td class="gt_row gt_right">2</td>
      <td class="gt_row gt_right">20</td>
    </tr>
    <tr class="gt_group_heading_row">
      <th class="gt_group_heading" colspan="3">B</th>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">r3</th>
      <td class="gt_row gt_right">3</td>
      <td class="gt_row gt_right">30</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">r4</th>
      <td class="gt_row gt_right">4</td>
      <td class="gt_row gt_right">40</td>
    </tr>
  </tbody>
  <tfoot><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> Grand summary note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> Body note</td></tr></tfoot>
  </table>
  
  </div>
  
  '''
# ---
# name: test_kitchen_sink_footnote_ordering_snap
  '''
  <div id="test_kitchen_sink_footnotes" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
    <tr class="gt_heading">
      <td colspan="4" class="gt_heading gt_title gt_font_normal">Kitchen Sink Table<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span></td>
    </tr>
    <tr class="gt_heading">
      <td colspan="4" class="gt_heading gt_subtitle gt_font_normal gt_bottom_border">Footnote ordering diagnostic<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span></td>
    </tr>
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="2" scope="colgroup" id="test_kitchen_sink_footnotes-ID">ID<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="2" scope="colgroup" id="test_kitchen_sink_footnotes-Metrics">
      <span class="gt_column_spanner">Metrics<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">4</span></span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_kitchen_sink_footnotes-x">x<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">5</span></th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_kitchen_sink_footnotes-y">y<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">6</span></th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr>
      <th class="gt_row gt_left gt_stub gt_grand_summary_row gt_last_grand_summary_row_top" colspan="2">Grand Total</th>
      <td class="gt_last_grand_summary_row_top gt_row gt_right gt_grand_summary_row"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">7</span> 210</td>
      <td class="gt_last_grand_summary_row_top gt_row gt_right gt_grand_summary_row">2100</td>
    </tr>
    <tr class="gt_row_group_first">
    <th class="gt_row gt_left gt_stub_row_group"
      rowspan="3">Alpha<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">8</span></th>
      <th class="gt_row gt_left gt_stub">a1<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">9</span></th>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">10</span> 10</td>
      <td class="gt_row gt_right">100</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">a2</th>
      <td class="gt_row gt_right">20</td>
      <td class="gt_row gt_right">200</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub gt_summary_row gt_first_summary_row">Sum<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">11</span></th>
      <td class="gt_first_summary_row gt_row gt_right gt_summary_row"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">12</span> 30</td>
      <td class="gt_first_summary_row gt_row gt_right gt_summary_row">300</td>
    </tr>
    <tr class="gt_row_group_first">
    <th class="gt_row gt_left gt_stub_row_group"
      rowspan="3">Beta</th>
      <th class="gt_row gt_left gt_stub">b1</th>
      <td class="gt_row gt_right">30</td>
      <td class="gt_row gt_right">300</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">b2</th>
      <td class="gt_row gt_right">40</td>
      <td class="gt_row gt_right">400</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub gt_summary_row gt_first_summary_row">Sum</th>
      <td class="gt_first_summary_row gt_row gt_right gt_summary_row">70</td>
      <td class="gt_first_summary_row gt_row gt_right gt_summary_row">700</td>
    </tr>
    <tr class="gt_row_group_first">
    <th class="gt_row gt_left gt_stub_row_group"
      rowspan="2"></th>
      <th class="gt_row gt_left gt_stub">c1</th>
      <td class="gt_row gt_right">50</td>
      <td class="gt_row gt_right">500</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">c2</th>
      <td class="gt_row gt_right">60</td>
      <td class="gt_row gt_right">600</td>
    </tr>
  </tbody>
  <tfoot><tr class="gt_sourcenotes"><td class="gt_sourcenote" colspan="4"><span class="gt_from_md">Source: synthetic data</span></td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> Title note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> Subtitle note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span> Stubhead note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">4</span> Spanner note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">5</span> Column x label note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">6</span> Column y label note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">7</span> Grand summary note (top)</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">8</span> Row group note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">9</span> Stub note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">10</span> Body cell note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">11</span> Summary stub note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="4"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">12</span> Summary note</td></tr></tfoot>
  </table>
  
  </div>
  
  '''
# ---
# name: test_tab_footnote_complete_ordering_snapshot
  '''
  <div id="test_complete_footnote_ordering" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
  
  <table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false">
  <thead>
  
    <tr class="gt_heading">
      <td colspan="3" class="gt_heading gt_title gt_font_normal">Title<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span></td>
    </tr>
    <tr class="gt_heading">
      <td colspan="3" class="gt_heading gt_subtitle gt_font_normal gt_bottom_border">Subtitle<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span></td>
    </tr>
  <tr class="gt_col_headings gt_spanner_row">
    <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id="test_complete_footnote_ordering-Stubhead">Stubhead<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span></th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="test_complete_footnote_ordering-Spanner-A">
      <span class="gt_column_spanner">Spanner A<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">4</span></span>
    </th>
    <th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="test_complete_footnote_ordering-Spanner-B">
      <span class="gt_column_spanner">Spanner B<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">5</span></span>
    </th>
  </tr>
  <tr class="gt_col_headings">
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_complete_footnote_ordering-col1">col1<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">6</span></th>
    <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1" scope="col" id="test_complete_footnote_ordering-col2">col2<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">7</span></th>
  </tr>
  </thead>
  <tbody class="gt_table_body">
    <tr>
      <th class="gt_row gt_left gt_stub">Row1<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">8</span></th>
      <td class="gt_row gt_right"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">9</span> 10</td>
      <td class="gt_row gt_right">20</td>
    </tr>
  </tbody>
  <tfoot><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span> Title note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span> Subtitle note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">3</span> Stubhead note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">4</span> Spanner A note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">5</span> Spanner B note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">6</span> Col1 note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">7</span> Col2 note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">8</span> Stub note</td></tr><tr class="gt_footnotes"><td class="gt_footnote" colspan="3"><span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">9</span> Body note</td></tr></tfoot>
  </table>
  
  </div>
  
  '''
# ---
# name: test_tab_footnote_stub_body_ordering_snapshot
  '''
  <tbody class="gt_table_body">
    <tr>
      <th class="gt_row gt_left gt_stub">A<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">1</span></th>
      <td class="gt_row gt_left">Y</td>
    </tr>
    <tr>
      <th class="gt_row gt_left gt_stub">B</th>
      <td class="gt_row gt_left">Z<span class="gt_footnote_marks" style="white-space:nowrap;font-style:italic;font-weight:normal;line-height:0;">2</span></td>
    </tr>
  </tbody>
  '''
# ---
